--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ script:
   - make clean
   - make
   - ./TicTacToeBoardTest
+
+after_success:
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
