--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ sudo: enabled
 
 language: cpp
 
+compiler:
+  - gcc
+
 before_install:
+  - pip install --user cpp-coveralls
   - mkdir gtest
   - cd gtest
   - git clone https://github.com/google/googletest.git
@@ -14,7 +18,7 @@ before_install:
 
 script:
   - make clean
-  - make
+  - ./configure --enable-gcov && make && make check
   - ./TicTacToeBoardTest
 
 after_success:
