--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ script:
   - ./TicTacToeBoardTest
 
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - coveralls --exclude gtest --gcov-options '\-lp'
